tests/rosetta/out/Pascal/check-that-file-exists.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T10:01:41Z
program CheckThatFileExists;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function printStat(fs: specialize TFPGMap<string, boolean>; path: string): integer;
begin
  if (fs.IndexOf(path) >= 0) then
  begin
    if fs.KeyData[path] then
    begin
      writeln(path + ' is a directory');
    end else
    begin
      writeln(path + ' is a file');
    end;
  end else
  begin
    writeln('stat ' + path + ': no such file or directory');
  end;
end;

function main(): integer;
var
  _tmp0: specialize TFPGMap<string, integer>;
  fs: specialize TFPGMap<string, boolean>;
begin
  _tmp0 := specialize TFPGMap<string, integer>.Create;
  fs := _tmp0;
  fs['docs'] := True;
  for p in specialize TArray<string>(['input.txt', '/input.txt', 'docs', '/docs']) do
  begin
    printStat(fs, p);
  end;
end;

begin
  main();
end.
